<resources>
    <string name="abbreviation">Abreviatura</string>
    <string name="action_save_changes">Guardar cambios</string>
    <string name="action_settings">Configuración</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Acceder</string>
    <string name="activate_login">Activar autentificación en la aplicación.</string>
    <string name="activate_widget">Permitir el widget del escritorio acceso a la información.</string>
    <string name="add">Añadir</string>
    <string name="add_hotel">Añadir hotel</string>
    <string name="add_remove_saliente">Añadir/Quitar Saliente</string>
    <string name="add_saliente">AÑADIR SALIENTE</string>
    <string name="add_schedule">Añadir Horas</string>
    <string name="add_type">Añadir Tipo</string>
    <string name="add_turn">Añadir Turno</string>
    <string name="alert_charged">Se cobra alerta</string>
    <string name="alert_description">Faltan %s días para la finalización del mes.</string>
    <string name="alert_status">¡Alerta F2!</string>
    <string name="alert_title">Cuadrante. No has llegado al F2</string>
    <string name="alerts">A</string>
    <string name="all">Todos</string>
    <string name="app_versionDate">8 de marzo de 2015</string>
    <string name="app_versionName">3.0</string>
    <string name="app_name">Cuadrante</string>
    <string name="app_email_address">progmac.es@gmail.com</string>
    <string name="ask_service_24_hours">Servicio 24 horas</string>
    <string name="ask_service_24_hours_summary">Si al guardar un servicio o tipo de servicio que tiene 24 horas de servicio, preguntar si está seguro de que el horario es el correcto.</string>
    <string name="ask_schedule">Preguntar por horarios</string>
    <string name="backup_db_auto">Auto-Copia</string>
    <string name="backup_db_auto_summary">Cada cuanto desea que se realice una copia de seguridad automaticamente.</string>
    <string name="backup_db_email_subject">Cuadrante - Copia de Seguridad</string>
    <string name="backup_db_email_message">Copia de seguridad de la aplicación "Cuadrante" con fecha: %s</string>
    <string name="backup_db_export">Hacer copia</string>
    <string name="backup_db_export_summary">Se enviará la copia por correo electrónico. En la siguiente pantalla deberá de hacer click en el botón "Enviar".</string>
    <string name="backup_db_import">Importar copia</string>
    <string name="backup_db_import_successfully">Importación de copia realizada con éxito.</string>
    <string name="backup_db_import_summary">Busque la copia explorando su tarjeta SD.</string>
    <string name="backup_db_title">Copias de seguridad</string>
    <string name="bar_add_comision">Añadir comisión</string>
    <string name="bar_add">Añadir</string>
    <string name="bg_color">Color de fondo</string>
    <string name="enter_to_service">Entrar en el servicio</string>
    <string name="enter_to_service_summary">En el menú desplegable que aparece al hacer click en un día del calendario, si se quiere mostrar la opción \'Entrar en el servicio\'</string>
    <string name="cancel">Cancelar</string>
    <string name="choose_email_client">Elija un cliente de correo electrónico:</string>
    <string name="clear_form">Limpiar formulario</string>
    <string name="colors">Colores</string>
    <string name="color_copy_to_clipboard">Color copiado al portapapeles</string>
    <string name="commissiones">Comisiones</string>
    <string name="commission_days">Días comisionado:</string>
    <string name="commission_large_days">Días largas:</string>
    <string name="commission_short_days">Días cortas:</string>
    <string name="commissions_days_length">Longitud en días</string>
    <string name="commissions_days_length_summary">A partir de cuantos días se considera que una comisión es larga o corta.</string>
    <string name="commissions_days_length_active">Ver largas y cortas</string>
    <string name="commissions_days_length_active_summary">Si quiere ver cuantos días ha estado en comisiones largas y cortas.</string>
    <string name="commissions_manutencion_active">Mostrar manuntención de un día</string>
    <string name="commissions_manutencion_active_summary">Para comisiones de un solo día, si se quiere mostrar el derecho a recibir la manutención completa o media, según el horario del servicio.</string>
    <string name="commissions_total">Total:</string>
    <string name="commissions_total_expenses_80_20_laundry">80%, 20% + lavandería</string>
    <string name="commissions_total_expenses_title">Visualizar dieta total</string>
    <string name="commissions_total_expenses_total">Total</string>
    <string name="commissions_total_expenses_summary">Como quiere que se vea el total de la dieta para cada comisión.</string>
    <string name="computing_hours_per_week">Cómputo de horas semanales</string>
    <string name="computing_hours_per_week_summary">Horas semanales que se deben de hacer</string>
    <string name="create_new_type_service">Crear nuevo tipo de servicio</string>
    <string name="create_new_type_service_summary">En el menú desplegable que aparece al hacer click en un día del calendario, si se quiere mostrar la opción \'Crear nuevo tipo de servicio\'</string>
    <string name="daily_expenses">Dieta diaria</string>
    <string name="daily_manutencion_expenses">Manutención diaria</string>
    <string name="daily_expenses2">Dieta diaria:</string>
    <string name="daily_expenses_summary">Dieta habitual en euros. Debe incluir la manutención completa. Después dentro de cada comisión puede modificar este valor individualmente.</string>
    <string name="daily_manutencion_expenses_summary">Manutención completa habitual en euros. Después durante las comisiones según se tenga derecho o no, se realizarán cálculos dejándola a media.</string>
    <string name="days">Días:</string>
    <string name="days_holidays">Días de vacaciones</string>
    <string name="days_own_affairs">Asuntos particulares</string>
    <string name="date_range">Rango de fechas</string>
    <string name="delete">Eliminar</string>
    <string name="delete_schedule">Quitar Horas</string>
    <string name="description_image_app_icon">App icon</string>
    <string name="dialog_about_me" formatted="false">Versión: %s%n%s%nBy progMac</string>
    <string name="dialog_message_laundry">Coste total, el cual será devuelto junto con el 20% de las dietas de esta comisión.</string>
    <string name="dialog_message_number_decimal">Para los decimales use el punto.</string>
    <string name="dialog_message_vote_for_me">Llevas un tiempo usando la aplicación, ¿no te importaría votar por ella en Google Play?\nSolo perderías un minuto.\n Gracias.\nEste mensaje no se volverá a mostrar.</string>
    <string name="domingo">dom.</string>
    <string name="email">Email</string>
    <string name="email_summary">Dirección email donde se le enviará las copias de seguridad.</string>
    <string name="f2_notify_active">Activar notificación</string>
    <string name="f2_notify_active_summary">Notificarme cuando falten pocos días para la finalización del mes y no haya conseguido el F2.</string>
    <string name="f2_notify_flag_sound">Sonido</string>
    <string name="f2_notify_flag_sound_summary">Usar además un sonido del sistema para la notificación.</string>
    <string name="f2_rest_days">Días para el F2</string>
    <string name="f2_rest_days_summary">Días que faltan para la finalización del mes y se avise si se llega o no al F2.</string>
    <string name="f2_title">F2</string>
    <string name="header_previous">&lt;&lt;</string>
    <string name="header_next">&gt;&gt;</string>
    <string name="holiday_bg_color">Festivos. Fondo</string>
    <string name="holiday_bg_color_summary">Color de fondo para los festivos</string>
    <string name="holiday_text_color">Festivos. Texto</string>
    <string name="holiday_text_color_summary">Color de texto para los festivos</string>
    <string name="holidays">Vacaciones</string>
    <string name="interval_anual">Del 1 de Febrero al 31 de Enero</string>
    <string name="interval_minutes_active">Intervalo de 15 minutos</string>
    <string name="interval_minutes_active_summary">Al editar el horario de un servicio o tipo de servicio, los minutos se pondrán automaticamente en intervalos de 15 minutos, es decir, 00, 15, 30, 45, no se podrá seleccionar minuto 7 por ejemplo.</string>
    <string name="jueves">jue.</string>
    <string name="length_service_name">Nº caracteres máximos</string>
    <string name="length_service_name_summary">En las abreviaturas de los servicios que se ven en el calendario.</string>
    <string name="login_title">Autentificación</string>
    <string name="login_summary">Si desea que se solicite una contraseña para acceder a la aplicación.</string>
    <string name="lunes">lun.</string>
    <string name="martes">mar.</string>
    <string name="miercoles">mié.</string>
    <string name="others">Otros</string>
    <string name="own_affairs">Asuntos particulares</string>
    <string name="pas_active">Activar P.A.S</string>
    <string name="pas_active_summary">P.A.S</string>
    <string name="pas_summary" formatted="false">Elija para la semana actual en qué semana se encuentra.%nSemana número %s. Del %s al %s.</string>
    <string name="pas_title">P.A.S</string>
    <string name="prompt_current_password">Contraseña actual</string>
    <string name="prompt_new_password">Nueva contraseña</string>
    <string name="prompt_new_password_repeat">Repita nueva contraseña</string>
    <string name="ready">Listo</string>
    <string name="resume">Resumen</string>
    <string name="sabado">sáb.</string>
    <string name="service_default_bg_color">Servicios. Fondo</string>
    <string name="service_default_bg_color_summary">Color de fondo para los servicios nuevos a crear.</string>
    <string name="service_default_text_color">Servicios. Texto</string>
    <string name="service_default_text_color_summary">Color de texto para los servicios nuevos a crear.</string>
    <string name="sunday_bg_color">Domingos. Fondo</string>
    <string name="sunday_bg_color_summary">Color de fondo para los domingos</string>
    <string name="sunday_color_active">Domingos con servicio</string>
    <string name="sunday_color_active_summary">Si desea que los domingos con servicio sigan teniendo el color por defecto.</string>
    <string name="sunday_text_color">Domingos. Texto</string>
    <string name="sunday_text_color_summary">Color de texto para los domingos</string>
    <string name="time_expire_session">Tiempo de expiración de la sesión.</string>
    <string name="today_bg_color">Día actual. Fondo</string>
    <string name="today_bg_color_summary">Color de fondo para el día actual.</string>
    <string name="today_text_color">Día actual. Texto</string>
    <string name="today_text_color_summary">Color del texto para el día actual.</string>
    <string name="today_default_color_active">Día actual</string>
    <string name="today_default_color_active_summary">Poder cambiar los colores del día actual. Si se desactiva se volverá a los colores por defecto que se tenía al instalar la aplicación.</string>
    <string name="type_service_holidays">Tipo de servicio</string>
    <string name="type_service_holidays_summary">Elija el tipo de servicio que corresponde con las vacaciones</string>
    <string name="type_service_medical_leave">Bajas médicas</string>
    <string name="type_service_medical_leave_summary">Elija el tipo de servicio que corresponde con las bajas médicas</string>
    <string name="type_service_own_affairs">Tipo de servicio</string>
    <string name="type_service_own_affairs_summary">Elija el tipo de servicio que corresponde con los asuntos particulares</string>
    <string name="viernes">vie.</string>
    <string name="widget_week">Widget semanal</string>
    <string name="widget_week_summary">Qué día se debe de mostrar en la primera celda.</string>
</resources>