<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity" >

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:layout_gravity="center_vertical"
            android:orientation="vertical" >
            
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:contentDescription="@string/description_image_app_icon"
                android:src="@drawable/cuadrante" />
            
            <CheckBox 
                android:id="@+id/activate_login"
                android:text="@string/activate_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            
            <CheckBox 
                android:id="@+id/activate_widget"
                android:text="@string/activate_widget"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            
            <LinearLayout
	            android:layout_gravity="left"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="horizontal" >
		        <Spinner 
		            android:id="@+id/expire_session"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
	                android:layout_weight="2"
		            android:entries="@array/login_expire_session">
		        </Spinner>
                <TextView
	                android:id="@+id/text_expire_session"
	                android:layout_width="wrap_content"
	                android:layout_height="match_parent"
	                android:layout_weight="1"
	                android:text="@string/time_expire_session"/>
	        </LinearLayout>
	        
            <EditText
                android:id="@+id/current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_current_password"
                android:maxLines="1"
                android:inputType="number"
                android:password="true"
                android:typeface="monospace"
                android:singleLine="true" />

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_new_password"
                android:inputType="number"
                android:password="true"
                android:maxLines="1"
                android:typeface="monospace"
                android:singleLine="true" />

            <EditText
                android:id="@+id/new_password_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_new_password_repeat"
                android:inputType="number"
                android:password="true"
                android:maxLines="1"
                android:typeface="monospace"
                android:singleLine="true" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/action_save_changes" />
        </LinearLayout>
    </ScrollView>

</merge>