<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<RelativeLayout 
		android:id="@+id/header"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:gravity="center_vertical|center_horizontal"
		android:layout_height="50dp"
		android:background="#ff000000">
		
		<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="left">	    		
			<TextView  
				android:id="@+id/previous" 
			    android:layout_height="wrap_content"
			    android:layout_width="50dp"
			    android:padding="5dp"
			    android:paddingLeft="5dp"
			    android:textSize="14sp"
			    android:textStyle="bold"
			    android:textColor="#fff"
			    android:gravity="center_horizontal"
			    android:text="@string/header_previous" 
			    android:clickable="true"/>
		</LinearLayout>
		
		<TextView  
			android:id="@+id/title" 
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:padding="5dp"
		    android:paddingLeft="5dp"
		    android:textSize="14sp"
		    android:textStyle="bold"
		    android:textColor="#fff"
		    android:gravity="center_horizontal" />
		<!-- 
		    android:layout_toRightOf="@+id/previous"/> -->
		
		<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="right"
		    android:layout_toRightOf="@+id/title">						
			<TextView  
				android:id="@+id/next" 
			    android:layout_height="wrap_content"
			    android:layout_width="50dp"
			    android:padding="5dp"
			    android:paddingLeft="5dp"
			    android:textSize="14sp"
			    android:textStyle="bold"
			    android:textColor="#fff"
			    android:gravity="center_horizontal"
			    android:text="@string/header_next"
			    android:clickable="true"/>
		</LinearLayout>
	</RelativeLayout>
	
	<TableLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="2dp"
	    android:layout_marginRight="2dp"
	    android:stretchColumns="*">
		
		<TableRow
		    android:id="@+id/tableRow_days_week_name"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >
	        <TextView
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:gravity="center"
	            android:text="@string/lunes"/>		    
	        <TextView
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:gravity="center"
	            android:text="@string/martes"/>		    
	        <TextView
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:gravity="center"
	            android:text="@string/miercoles"/>		    
	        <TextView
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:gravity="center"
	            android:text="@string/jueves"/>		    
	        <TextView
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:gravity="center"
	            android:text="@string/viernes"/>		    
	        <TextView
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:gravity="center"
	            android:text="@string/sabado"/>		    
	        <TextView
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:gravity="center"
	            android:text="@string/domingo"/>		    	    
	    </TableRow>
	</TableLayout>
	<TableLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="0dp"
	    android:layout_marginRight="0dp"
	    android:stretchColumns="*">
			    
	    <TableRow 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
			<GridView
			    android:id="@+id/gridview"
			    android:layout_width="match_parent" 
			    android:layout_height="match_parent"
			    android:numColumns="7"
			    android:verticalSpacing="2dp"
			    android:horizontalSpacing="2dp"
			    android:stretchMode="columnWidth"
			    android:gravity="center"/>	        
	    </TableRow>
	    <TableRow 	       
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="2dp"
	        android:layout_marginRight="2dp"
	        android:layout_marginTop="10dp">
			<ScrollView 
			    android:layout_width="match_parent"
        		android:layout_height="match_parent">
			    <LinearLayout
				    android:id="@+id/resume_month_services"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:orientation="vertical"
				    android:gravity="top|left"> 		    	    
		    	</LinearLayout>	
	    	</ScrollView>
	    </TableRow>
	</TableLayout>	  
	<TextView 
	    android:id="@+id/contextmenu"
	    android:layout_width="0dp"
	    android:layout_height="0dp"
	    android:visibility="gone"/><!-- Para usarlo para saltar el contextmenu -->
	
</LinearLayout>
